// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SInput.vue can be invalid 1`] = `
<label class="label" for="input">
  <div>
    input
    <!---->
  </div>
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input input--invalid">
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SInput.vue can be required 1`] = `
<label class="label" for="input">
  <div>
    input
    <!---->
  </div>
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input">
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SInput.vue can have a placeholder 1`] = `
<label class="label" for="input">
  <div>
    input
    <!---->
  </div>
  <div class="input__container"><input id="input" name="input" placeholder="some placeholder" required="required" type="text" class="input">
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SInput.vue can have an icon on the left 1`] = `
<label class="label" for="input">
  <div>
    input
    <!---->
  </div>
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input input--has-icon-left"> <svg viewBox="0 0 24 24" class="icon input__icon input__icon--left icon--color-green">
      <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
    </svg>
    <!---->
  </div>
</label>
`;

exports[`SInput.vue can have an icon on the right 1`] = `
<label class="label" for="input">
  <div>
    input
    <!---->
  </div>
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input input--has-icon-right">
    <!----> <svg viewBox="0 0 24 24" class="icon input__icon input__icon--right icon--color-green">
      <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
    </svg></div>
</label>
`;

exports[`SInput.vue can hide the optional tag 1`] = `
<label class="label" for="input">
  <div>
    input
    <!---->
  </div>
  <div class="input__container"><input id="input" name="input" placeholder="" type="text" class="input">
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SInput.vue can set each icon color 1`] = `
<label class="label" for="input">
  <div>
    input
    <!---->
  </div>
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input">
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SInput.vue renders correctly 1`] = `
<label class="label" for="input">
  <div>
    input
    <!---->
  </div>
  <div class="input__container"><input id="input" name="input" placeholder="" required="required" type="text" class="input">
    <!---->
    <!---->
  </div>
</label>
`;
